--- a/style.css
+++ b/style.css
@@ -4,3 +4,50 @@
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
 }
+
+/* wrap container rules */
+
+#wrap{
+    width: 100%;
+    height: 100vh;
+    margin: 10px ;
+    position: relative;
+    /* debug */
+    background-color: rgba(0, 0, 0, 0.357);
+    
+}
+/* container img and scroll */
+
+.flex{
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 10px;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    
+}
+.flex > .speaker,
+.flex > .maximize{
+    background-color: #494948;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 10px;
+}
+/* .flex, .speaker, .maximize{
+    line-height: 20px;
+    color: white;
+    cursor: pointer;
+    
+}
+
+.speaker,i .maximize,i{
+  border-radius: 30px;
+  padding: 10px;
+  background-color: grey;
+} */
+
+
+
+
