--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 .flex{
     display: flex;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 10px;
     margin-right: 10px;
     padding: 5px;
     background-color: black;
@@ -35,18 +35,16 @@
     border-radius: 10px;
     font-size: 10px;
 }
-/* .flex, .speaker, .maximize{
-    line-height: 20px;
-    color: white;
-    cursor: pointer;
-    
-}
 
-.speaker,i .maximize,i{
-  border-radius: 30px;
-  padding: 10px;
-  background-color: grey;
-} */
+/* main section members rules  */
+
+.user{
+    min-width: 100%;
+    height:150px;
+    position: relative;
+    /* debug */
+    background-color: blue;
+}
 
 
 
