--- a/style.css
+++ b/style.css
@@ -5,10 +5,24 @@
     font-family: "Lato", sans-serif;
 }
 
+header{
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    padding-top: 3px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 900;
+}
+
+
 main{
     width: 100%;
-    background-color: #000;
-    height: calc(100vh - 100px);
+    background-color: black;
+    overflow-y: auto;
+    height: calc(100vh - 80px);
+    padding-top: 60px;
 }
 
 
@@ -19,9 +33,11 @@ main{
     justify-content: flex-end;
     gap: 10px;
     padding: 5px;
-    background-color: black;
-    color: white;
     
+    color: white;
+   
+    
+   
 }
 .flex > .speaker,
 .flex > .maximize{
@@ -31,15 +47,15 @@ main{
     font-size: 10px;
 }
 
+
+/* MAIN */
 /* main section members rules  */
 
 /* all container img description */
 .user{
-    min-width: calc(100% / 7 - 20px);
-    height:150px;
+    width: 14%;
+    margin-bottom: 10px;
     position: relative;
-    /* debug */
-    background-color: blue;
 }
 
 .user  img{
@@ -52,25 +68,97 @@ main{
 /* add members propriety flex */
 
  .members-flex {
-    min-height: 100vh;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
-    gap: 5px;
 }
-    
-
 
 .name *{
     color: lightgray;
 }
 .name{
+    background-color: #494948;
+    font-size: 10px;
+    color: white;
+    padding: 2px 3px;
     position: absolute;
-    bottom: 0px;
-    left: 0px;
-    background-color: rgba(34, 34, 34, .7);
-    padding: 5px 5px;
+    z-index: 400;
+    bottom: 8px;
+    left: 0;
+   
 }
 
+/* footer sidebar */
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+/* container footer rules */
 
 
+.bottombar{
+    width: 100%;
+    height: 80px;
+    background-color: rgb(34, 34, 34);
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 900;
+}
+/* left bar */
+
+.left-ink {
+    width: 20%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* middle bar*/
+.middle-ink {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+#green {
+    color: rgb(21, 146, 21);
+}
+
+/* righ bar */
+
+.right-ink{
+    width: 20%;
+    height: 100%;
+    font-size: 12px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.ended {
+    width: 40%;
+    height: 100%;
+    background-color: rgb(71, 71, 71);
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 10px;
+}
+.right-ink a{
+    color: red;
+}
+
+.text{
+    font-size: 10px;
+}
