--- a/style.css
+++ b/style.css
@@ -52,14 +52,18 @@ main{
 
 /* all container img description */
 .user{
-    width: 14%;
+   flex-basis: 100px;
+   flex-grow: 1;
+   flex-shrink: 1;
     margin-bottom: 10px;
     position: relative;
+
 }
 
 .user  img{
     min-width: 100%;
     height: 100%;
+    padding: 5px;
     object-fit: cover;
 }
 
@@ -113,7 +117,7 @@ a{
 /* left bar */
 
 .left-ink {
-    width: 33%;
+    width: 40%;
     text-align: center;
     display: flex;
     align-items: center;
@@ -135,7 +139,7 @@ a{
 /* righ bar */
 
 .right-ink{
-    width: 20%;
+    width: 40%;
     height: 100%;
     font-size: 12px;
     display: flex;
@@ -143,7 +147,7 @@ a{
     align-items: center;
 }
 .ended {
-    width: 33%;
+    width: 30%;
     height: 100%;
     background-color: rgb(71, 71, 71);
     border-radius: 5px;
